--- a/package.json
+++ b/package.json
@@ -15,5 +15,31 @@
     "astro": "^4.1.2",
     "tailwindcss": "^3.4.1",
     "typescript": "^5.3.3"
+  },
+  "devDependencies": {
+    "eslint": "^8.56.0",
+    "eslint-config-codely": "^3.1.3"
+  },
+  "eslintConfig": {
+    "extends": [
+      "eslint-config-codely/typescript"
+    ],
+    "parserOptions": {
+      "project": [
+        "./tsconfig.json"
+      ]
+    },
+    "settings": {
+      "import/resolver": {
+        "node": {
+          "extensions": [
+            ".js",
+            ".jsx",
+            ".ts",
+            ".tsx"
+          ]
+        }
+      }
+    }
   }
 }
