--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@astrojs/check": "^0.4.1",
     "@astrojs/react": "^3.0.9",
     "@astrojs/tailwind": "^5.1.0",
+    "@fontsource/caveat-brush": "^5.0.8",
     "@nextui-org/react": "^2.2.9",
     "@types/react": "^18.2.47",
     "@types/react-dom": "^18.2.18",
