--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "framer-motion": "^10.18.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "sharp": "^0.33.1",
     "tailwindcss": "^3.4.1",
     "typescript": "^5.3.3"
   },
