--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@astrojs/check": "^0.4.1",
     "@astrojs/react": "^3.0.9",
     "@astrojs/tailwind": "^5.1.0",
+    "@astrojs/vercel": "^7.5.3",
     "@fontsource-variable/montserrat": "^5.0.17",
     "@fontsource/caveat-brush": "^5.0.8",
     "@types/react": "^18.2.47",
